﻿[30/11/2020] - 5.0.2 - Simone Pelaia
Modificato il nome di attributo DbDataType -> CustomDbType

[30/11/2020] - 5.0.3 - Simone Pelaia
Fix modificatore attributo CustomDbType che deve essere per property e non per classe

[30/11/2020] - 5.0.4 - Simone Pelaia
Link a Db 5.0.4

[01/12/2020] - 5.0.5 - Simone Pelaia
Link a Db 5.0.5

[01/12/2020] - 5.0.6 - Simone Pelaia
implemenatzione funzione facility di lazy load per oggetti su BusinessObject