@@ -8,7 +8,7 @@ namespace Business.Data.Objects.Core.Attributes
     /// Indica che una proprieta' e' un campo con generazione automatica di ID
     /// </summary>
     [AttributeUsage(AttributeTargets.Property, AllowMultiple = false)]
-    public class AutoIncrement : BaseAutomaticAttribute 
+    public class AutoIncrement : AutomaticField 
     {
     }
 }
